--- a/pages/index.html
+++ b/pages/index.html
@@ -8,9 +8,7 @@
     <title>Menu</title>
 </head>
 <body>
-    <header id="principal">
-        <img src="/imgs/V.png" alt="V" id="imgPrincipal"> <h1 id="name">ICTOR</h1>
-    </header>
+    <script src="/scripts/header.js"></script>
 
     <script src="/scripts/navigation.js"></script>
 
