Exercício 4(Salários) realizado

--- a/pages/imc.html
+++ b/pages/imc.html
@@ -24,10 +24,10 @@
                     <legend>Calcule seu IMC</legend>
                         
                     <label for="altura">Informe sua altura:</label>
-                    <input type="number" name="altura" id="altura" placeholder="Informe altura">
+                    <input type="text" name="altura" id="altura" placeholder="Informe altura" onblur="trocaVirgula(this)">
 
                     <label for="peso">Informe seu peso:</label>
-                    <input type="number" name="peso" id="peso" placeholder="Informe peso">
+                    <input type="text" name="peso" id="peso" placeholder="Informe peso" onblur="trocaVirgula(this)"
                     
 
                 </fieldset>
