Personalizando css e adicionando footer

--- a/pages/index.html
+++ b/pages/index.html
@@ -13,5 +13,7 @@
     <script src="/scripts/navigation.js"></script>
 
 
+    <footer><img src="/imgs/V.png" alt="" id="imgFooter"></footer>
+    
 </body>
 </html>
