Adicionando responsividade e alterando footer

--- a/pages/imc.html
+++ b/pages/imc.html
@@ -27,7 +27,7 @@
                     <input type="text" name="altura" id="altura" placeholder="Informe altura" onblur="trocaVirgula(this)">
 
                     <label for="peso">Informe seu peso:</label>
-                    <input type="text" name="peso" id="peso" placeholder="Informe peso" onblur="trocaVirgula(this)"
+                    <input type="text" name="peso" id="peso" placeholder="Informe peso" onblur="trocaVirgula(this)">
                     
 
                 </fieldset>
