Adicionando verificações aos arquivos JS

--- a/pages/index.html
+++ b/pages/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 <link rel="stylesheet" href="/styles/navigation.css">
 <link rel="stylesheet" href="/styles/content.css">
+<link rel="icon" type="image/png" href="/imgs/V.png">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
