--- a/ProdutosCRUD/pages/produtos.html
+++ b/ProdutosCRUD/pages/produtos.html
@@ -35,6 +35,7 @@
     <table class="table m-3">
         <thead class="thead-dark">
             <tr>
+                <th scope="col">#</th>
                 <th scope="col">Descrição</th>
                 <th scope="col">Valor</th>
                 <th scope="col">Unidades</th>
@@ -45,8 +46,10 @@
         <tbody>
 
         </tbody>
+        <thead>
+            <tr id="tr"></tr>
+        </thead>
     </table>
 
-    
 </body>
 </html>
