--- a/ProdutosCRUD/pages/produtos.html
+++ b/ProdutosCRUD/pages/produtos.html
@@ -47,6 +47,7 @@
                 <th scope="col">Descrição</th>
                 <th scope="col">Valor</th>
                 <th scope="col">Unidades</th>
+                <th scope="col">SubTotal</th>
                 <th scope="col">Excluir</th>
                 <th scope="col">Editar</th>
             </tr>
