--- a/Storages/pages/login.html
+++ b/Storages/pages/login.html
@@ -27,6 +27,10 @@
 
                 <div class="mt-3 d-flex justify-content-center">
                     <input class="btn btn-success" type="button" id="logar" onclick="logarUsuario()" value="Logar">
+
+                </div>
+                <div class="mt-1 d-flex justify-content-center">
+                    <a href="/pages/index.html">Voltar ao início</a>
                 </div>
             </form>
 </body>
