--- a/Storages/pages/signin.html
+++ b/Storages/pages/signin.html
@@ -36,6 +36,9 @@
                 <div class="mt-3 d-flex justify-content-center">
                     <input class="btn btn-success" type="button" id="cadastrar" onclick="cadastrarMaisUsuarios()" value="Cadastrar">
                 </div>
+                <div class="mt-1 d-flex justify-content-center">
+                    <a href="/pages/index.html">Voltar ao início</a>
+                </div>
             </form>
 
 </body>
